用老版的StateSwitchingButton